Mobile navbar overlap fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -252,19 +252,19 @@ section {
 .header {
   z-index: 997;
   position: absolute;
-  padding: 30px 0;
+  padding: 0px 0;
   top: 0;
   left: 0;
   right: 0;
 }
 
 .header .logo img {
-  max-height: 150px;
+  max-height: 100px;
   margin-right: 6px;
 }
 
 .header .logo h1 {
-  font-size: 24px;
+  font-size: 18px;
   font-weight: 700;
   color: #fff;
   margin-bottom: 0;
@@ -541,10 +541,10 @@ section {
 
 .writing-effect {
   display: inline-block;
-  overflow: hidden;
+  overflow:auto;
   white-space: nowrap;
-  border-right: 3px solid #000; /* add a border to simulate a typing cursor */
-  animation: typing 3s steps(20, end);
+  /* border-right: 3px solid #000; add a border to simulate a typing cursor */
+  animation: typing 3s steps(200, end);
   max-width: 100%; /* add a maximum width to prevent overflowing */
 }
 
@@ -1965,7 +1965,7 @@ section {
 
 @media (max-width: 768px) {
   .hero .info h2 {
-    font-size: 36px;
+    font-size: 20px;
   }
 }
 
